--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    font-family: sans-serif;
+    font-size: 16px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+    font-size: 45px;
+    color: purple;
+    text-decoration: underline;
+}
+
+table {
+    display: inline-block;
+    border-collapse: collapse;
+    margin: 20px;
+    text-align: left;
+}
+
+table caption {
+    font-size: 22px;
+    text-align: left;
+    margin-bottom: 10px;
+}
+
+table caption span.dayName {
+    float: left;
+    font-weight: bold;
+    text-decoration: underline;
+    font-size: 20px;
+}
+
+table caption span.addNewMealEntry {
+    float: right;
+    color: green;
+}
+
+table caption span.addNewMealEntry:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+table thead tr th {
+    padding: 7px;
+}
+
+table tbody tr td {
+    padding: 7px;
+    min-width: 150px;
+}
+
+table tbody tr:nth-child(odd) {
+    background-color: rgba(230, 203, 0, 0.42);
 }
